--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <link href="https://fonts.googleapis.com/css2?family=Orbit&display=swap" rel="stylesheet">
-  <link href="/dist/output.css" rel="stylesheet">
+  <!-- <link href="/dist/output.css" rel="stylesheet"> -->
 
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
