--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   <title>마음 우주</title>
 </head>
 
-<body>
+<body style="background-color: black;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
